# mimir_well_engine

./: .gitignore  Cargo.toml  README.md  deny.toml
docs/: CODE_READING_GUIDE.md  LEARNING_GUIDE.md  TASK_01_MDL_STRUCTURE.md
mdl_macro/: Cargo.toml
mdl_macro/src/: lib.rs
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/v3/: connector.rs  mod.rs
src/config/: mod.rs
src/connector/: mod.rs  postgres.rs  trait_.rs
src/engine/: mod.rs  rewriter.rs
src/error/: mod.rs
src/mdl/: analyzer.rs  cls.rs  manifest.rs  mod.rs  utils.rs
src/model/: manifest.rs  mod.rs  request.rs  response.rs
